force-app/main/default/objects/cgcloud__Signature_Flow_Step__c/cgcloud__Signature_Flow_Step__c.object-meta.xml
<CustomObject>
    <description>This object holds the detail of the signature flow steps used in a signature template.</description>
    <label>Signature Flow Step</label>
    <nameField>
        <displayFormat>SFS-{000000}</displayFormat>
        <label>Signature Flow Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signature Flow Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>