force-app/main/default/objects/cgcloud__Signature_Flow_Step__c/fields/cgcloud__Authentication__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Authentication__c</fullName>
    <label>Authentication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>NameOptional</fullName>
            </value>
            <value>
                <fullName>NameRequired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>