force-app/main/default/objects/cgcloud__Signature_Flow_Step__c/fields/cgcloud__Function__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cashier</fullName>
            </value>
            <value>
                <fullName>Checker</fullName>
            </value>
            <value>
                <fullName>Codriver</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Guard</fullName>
            </value>
            <value>
                <fullName>MobileUser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>