force-app/main/default/objects/cgcloud__Signature_Flow_Step__c/fields/cgcloud__Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Signature_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Signature</label>
    <type>Checkbox</type>
</CustomField>