force-app/main/default/objects/cgcloud__Signature_Flow_Step__c/fields/cgcloud__Signature_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Signature_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the signature template</description>
    <label>Signature Template</label>
    <referenceTo>cgcloud__Signature_Template__c</referenceTo>
    <relationshipLabel>Signature Flow Steps</relationshipLabel>
    <relationshipName>Signature_Flow_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>