force-app/main/default/objects/cgcloud__Signature_Flow_Step__c/validationRules/cgcloud__Check_If_Signature_Template_Is_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Signature_Template_Is_Changed</fullName>
    <active>true</active>
    <description>The Signature Template can&apos;t be edited after Signature Flow Step creation.</description>
    <errorConditionFormula>AND(ISCHANGED(cgcloud__Signature_Template__c) , NOT(ISBLANK(PRIORVALUE(cgcloud__Signature_Template__c))))</errorConditionFormula>
    <errorMessage>The Signature Template can&apos;t be edited after Signature Flow Step creation.</errorMessage>
</ValidationRule>